# workflow_system_project

./: .gitignore  BUILD_AND_TEST.md  CLEANUP_GUIDE.md  CLEANUP_PLAN.md  CMakeLists.txt  CODE_COMMENT_SUMMARY.md  COMPILE_TEST_GUIDE.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUGGESTIONS.md  OPTIMIZATION_SUMMARY.txt  QUICK_FIX_GUIDE.md  README.md  REFACTORING_QUICK_REFERENCE.md  TEST_STEPS.md  auto_split_headers.py  build_and_test.sh  cleanup.sh  cleanup_docs.sh
docs/: ANALYSIS_REPORT.md  FEATURES.md  FEATURE_OVERVIEW.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_COMPLETE.md  PLUGIN_INTEGRATION.md  PROJECT_STRUCTURE.md  REFACTORING_SUMMARY.md  ROADMAP.md
examples/: advanced_example.cpp  checkpoint_example.cpp  comprehensive_example.cpp  conditional_example.cpp  config_example.cpp  main.cpp  observer_example.cpp  orchestration_example.cpp  performance_optimization_example.cpp  persistence_example.cpp  queue_example.cpp  refactoring_examples.cpp  scheduler_example.cpp  version_control_example.cpp  workflow_template_example.cpp
examples/plugin/: host_main.cpp
include/workflow_system/core/: any.h  exceptions.h  logger.h  logging_macros.h  types.h  utils.h
include/workflow_system/implementations/: alert_manager_impl.h  async_logger.h  checkpoint_manager_impl.h  circuit_breaker.h  conditional_workflow_impl.h  dead_letter_queue_impl.h  filesystem_resource_manager.h  json_config_manager.h  memory_pool.h  metrics_collector.h  retry_policy.h  sqlite_workflow_persistence.h  system_facade.h  timeout_handler.h  workflow_context.h  workflow_graph.h  workflow_manager.h  workflow_observer_impl.h  workflow_orchestrator.h  workflow_scheduler_impl.h  workflow_template_impl.h  workflow_tracer_impl.h  workflow_version_control_impl.h
include/workflow_system/implementations/workflows/: base_workflow.h
include/workflow_system/interfaces/: alert_manager.h  checkpoint_manager.h  conditional_workflow.h  config_manager.h  dead_letter_queue.h  metrics_collector.h  resource_manager.h  timeout_handler.h  workflow.h  workflow_manager.h  workflow_observer.h  workflow_orchestrator.h  workflow_persistence.h  workflow_plugin.h  workflow_scheduler.h  workflow_template.h  workflow_tracer.h  workflow_version_control.h
include/workflow_system/plugin/communication/: AsyncChannel.hpp  Channel.hpp  DataChannel.hpp  Event.hpp  EventBus.hpp  Message.hpp  MessageBus.hpp
include/workflow_system/plugin/config/: ConfigManager.hpp
include/workflow_system/plugin/core/: IPlugin.hpp  IPluginContext.hpp  IPluginManager.hpp  PluginInfo.hpp  PluginManifest.hpp  ServiceLocator.hpp  Version.hpp
include/workflow_system/plugin/dependency/: DependencyResolver.hpp
include/workflow_system/plugin/lifecycle/: LifecycleManager.hpp
include/workflow_system/plugin/runtime/: PluginContext.hpp  PluginManager.hpp
include/workflow_system/plugin/utils/: Logger.hpp  LoggerAdapter.hpp  ThreadPool.hpp
plugins/: CMakeLists.txt  README.md
plugins/examples/: AsyncDemoPlugin.hpp  CalculatorPlugin.cpp  CalculatorPlugin.hpp  DemoPlugin.cpp  DemoPlugin.hpp  test_plugin_host.cpp
plugins/examples/advanced_plugin/: advanced_plugin.cpp
plugins/examples/hello_plugin/: hello_plugin.cpp
plugins/include/: advanced_plugin_loader.h  dependency_resolver.h  message_bus.h  plugin_config.h  plugin_interface.h  plugin_loader.h  resource_manager.h  service_registry.h  version_manager.h
plugins/src/: plugin_loader.cpp
plugins/tests/: plugin_tests.cpp
src/core/: exceptions.h  logger.h  logging_macros.h  types.h
src/implementations/: alert_manager_impl.cpp  alert_manager_simple.h  async_logger.cpp  async_logger.h  checkpoint_manager_impl.cpp  conditional_workflow_impl.cpp  conditional_workflow_impl.h  dead_letter_queue.h  dead_letter_queue_impl.cpp  dead_letter_queue_impl.h  filesystem_resource_manager.h  json_config_manager.cpp  json_config_manager.h  memory_pool.h  metrics_collector.cpp  metrics_collector.h  retry_policy.h  sqlite_workflow_persistence.cpp  system_facade.cpp  system_facade.h  timeout_handler.h  workflow_context.h  workflow_graph.cpp  workflow_manager.cpp  workflow_orchestrator.cpp  workflow_scheduler_impl.cpp  workflow_scheduler_impl.h  workflow_template_impl.cpp  workflow_template_impl.h  workflow_tracer_impl.cpp  workflow_tracer_impl.h  workflow_version_control_impl.cpp
src/implementations/workflow_plugins/: workflow_plugin_context.h
src/interfaces/: checkpoint_manager.h  conditional_workflow.h  dead_letter_queue.h  resource_manager.h  retry_policy.h  workflow_graph.h  workflow_scheduler.h  workflow_tracer.h
src/plugin/communication/: EventBus.cpp  MessageBus.cpp
src/plugin/config/: ConfigManager.cpp
src/plugin/core/: PluginManifest.cpp
src/plugin/dependency/: DependencyResolver.cpp
src/plugin/lifecycle/: LifecycleManager.cpp
src/plugin/runtime/: PluginContext.cpp  PluginManager.cpp
src/plugin/utils/: ThreadPool.cpp
tests/: test_all.cpp  test_async_logger.cpp  test_conditional_workflow.cpp  test_config_manager.cpp  test_core_types.cpp  test_extended_modules.cpp  test_framework.h  test_memory_pool.cpp  test_system_facade.cpp  test_workflow_graph.cpp  test_workflow_manager.cpp  test_workflow_observer.cpp  test_workflow_orchestrator.cpp  test_workflow_persistence.cpp  test_workflow_template.cpp  test_workflow_version_control.cpp
tests/plugin/: test_channel.cpp  test_service_locator.cpp
